1.0 "Asieoniezi"

???
 404833 marking a group as read doesn't stick between sessions (Frank Tabor)
 405637 give the save button focus in the save dialog (Chris Petersen)
 405765 some multiparts aren't grouped properly (Konrad Karl)

0.123 "El Nuevo Barretto"
 404515 0.122 build problems in `po' (Pteer)
 404309 0.122 build problems for uint64_t (Geoff)
 404837 newsgroups disappear in 0.121 and 0.122 (Kevin Brammer)
 404183 null pointer in printf (Laurent Bigonville)
 371838 header pane not updated for scores on bytes or lines (Mike)
 370195 uulib/fptools.c assert issue - crash (Samuli Karkkainen)
 404979 in 0.122, `cache' behaves like `read' (Michael Bernstein)
 395318 show `wait' cursor when filtering (Kreao Kunjas)
 404347 indicate offline status more clearly (Samuli Karkkainen)

0.122 "Not Even Wrong"
 354779 pan no longer attempts to reconnect (Jason Auvenshine)
 403513 crash in FC6 when viewing one specific message (Yannick Palanque)
 401012 freed memory read in socket-impl-gio (Charles)
 402121 rare memory corruption when parsing dates in scorefile (Charles)
 403066 getting new groups, conditional jump on uninitialised value (Charles)
 401087 servers.xml's file permissions are too lax (Robert Marshall)
 399776 group pane not syncronized when group changes (Bruce Bowler)
 307028 editor error: cursor positioning on indented lines (Richard Rasker)
 401449 sort-by-author doesn't work properly (Charles Hill, Jason Mack)
 400814 unable to mark some groups as read (Christophe)
 402704 queue size too small in task-pane.cc (Shana)
 403762 pasted text isn't wrapped automatically (Artur Jachacy)
 389817 article not shown if another DL in progress (Samuli Karkkainen)
 403076 focus is incorrect when returning to header pane (Walt)
 402743 add keyboard shortcuts in task window (Ulrich Binder)
 402200 support large article cache sizes (Craig Ruff)
 400800 use libsexy for the toolbar's icon entry fields (Charles)
 399616 log message error in 0.121 (Charles)