@@ -4,6 +4,7 @@
  404833 marking a group as read doesn't stick between sessions (Frank Tabor)
  405637 give the save button focus in the save dialog (Chris Petersen)
  405765 some multiparts aren't grouped properly (Konrad Karl)
+ 360376 go to next unread-group should be circular (Frederic Crozat)
 
 0.123 "El Nuevo Barretto"
  404515 0.122 build problems in `po' (Pteer)
